--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,120 +1,172 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-android:id="@+id/widget28"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent"
-xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/widget28"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	xmlns:android="http://schemas.android.com/apk/res/android"
 >
-<Button
-android:id="@+id/enable"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/ok"
-android:layout_below="@+id/widget34"
-android:layout_alignParentRight="true"
->
-</Button>
-<TableLayout
-android:id="@+id/widget34"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="vertical"
-android:layout_alignParentTop="true"
-android:layout_alignParentLeft="true"
->
-<TableRow
-android:id="@+id/widget35"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
->
-<TextView
-android:id="@+id/header"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/header"
->
-</TextView>
-</TableRow>
-<TableRow
-android:id="@+id/widget36"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
->
-<TableLayout
-android:id="@+id/widget38"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:orientation="vertical"
->
-<TableRow
-android:id="@+id/widget39"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
->
-<TextView
-android:id="@+id/red"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/red"
->
-</TextView>
-<EditText
-android:id="@+id/redIn"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/thousand"
-android:textSize="18sp"
->
-</EditText>
-</TableRow>
-<TableRow
-android:id="@+id/widget43"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
->
-<TextView
-android:id="@+id/green"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/green"
->
-</TextView>
-<EditText
-android:id="@+id/greenIn"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/thousand"
-android:textSize="18sp"
->
-</EditText>
-</TableRow>
-<TableRow
-android:id="@+id/widget40"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:orientation="horizontal"
->
-<TextView
-android:id="@+id/blue"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/blue"
->
-</TextView>
-<EditText
-android:id="@+id/blueIn"
-android:layout_width="wrap_content"
-android:layout_height="wrap_content"
-android:text="@string/thousand"
-android:textSize="18sp"
->
-</EditText>
-</TableRow>
-</TableLayout>
-</TableRow>
-</TableLayout>
+	<Button
+		android:id="@+id/enable"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:text="@string/ok"
+		android:layout_below="@+id/widget34"
+		android:layout_alignParentRight="true"
+	/>
+
+	<TableLayout
+		android:id="@+id/widget34"
+		android:layout_width="fill_parent"
+		android:layout_height="wrap_content"
+		android:orientation="vertical"
+		android:layout_alignParentTop="true"
+		android:layout_alignParentLeft="true"
+	>
+
+		<TableRow
+			android:id="@+id/widget35"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+		>
+
+			<TextView
+				android:id="@+id/header"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/header"
+			/>
+
+		</TableRow>
+
+		<TableRow
+			android:id="@+id/widget36"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+		>
+
+			<TableLayout
+				android:id="@+id/widget38"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:orientation="vertical"
+				android:padding="5dip"
+			>
+
+				<TableRow
+					android:id="@+id/widget39"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:paddingTop="5dip"
+					android:paddingBottom="5dip"
+				>
+					<TextView
+						android:id="@+id/red"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/red"
+						android:textSize="16sp"
+					/>
+
+					<SeekBar android:id="@+id/seekRed"
+						android:layout_width="190dp"
+						android:layout_height="wrap_content" 
+						android:max="1000"
+						android:progress="0"
+				    />
+
+					<TextView
+						android:id="@+id/redNum"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/thousand"
+						android:textSize="16sp"
+						android:paddingLeft="12dip"
+					/>
+			
+				</TableRow>
+				
+				<TableRow
+					android:id="@+id/widget43"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:paddingTop="5dip"
+					android:paddingBottom="5dip"
+				>
+
+					<TextView
+						android:id="@+id/green"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/green"
+						android:textSize="16sp"
+					/>
+
+					<SeekBar android:id="@+id/seekGreen"
+						android:layout_width="190dp"
+						android:layout_height="wrap_content" 
+						android:max="1000"
+						android:progress="0"
+	    			/>
+
+					<TextView
+						android:id="@+id/greenNum"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/thousand"
+						android:textSize="16sp"
+						android:paddingLeft="12dip"
+					/>
+
+				</TableRow>
+
+				<TableRow
+					android:id="@+id/widget40"
+					android:layout_width="fill_parent"
+					android:layout_height="wrap_content"
+					android:orientation="horizontal"
+					android:paddingTop="5dip"
+					android:paddingBottom="5dip"
+				>
+					<TextView
+						android:id="@+id/blue"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/blue"
+						android:textSize="16sp"
+					/>
+				
+					<SeekBar android:id="@+id/seekBlue"
+						android:layout_width="190dp"
+						android:layout_height="wrap_content" 
+						android:max="1000"
+						android:progress="0"
+				    />
+
+					<TextView
+						android:id="@+id/blueNum"
+						android:layout_width="55dp"
+						android:layout_height="wrap_content"
+						android:text="@string/thousand"
+						android:textSize="16sp"
+						android:paddingLeft="12dip"
+					/>
+
+				</TableRow>
+			</TableLayout>
+		</TableRow>
+	</TableLayout>
+
+
+	<ImageView
+        android:id="@+id/calibImage"
+		android:layout_below="@+id/enable"
+        android:layout_width="400px" 
+        android:layout_height="400px"
+        android:scaleType="fitXY" 
+	/>
+
 </RelativeLayout>
