--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -35,10 +35,27 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:text="@string/header"
+				android:textSize="18sp"
 			/>
 
 		</TableRow>
 
+		<TableRow
+			android:id="@+id/widget35"
+			android:layout_width="fill_parent"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+		>
+
+			<ImageView
+       			android:id="@+id/calibImage"
+	    		android:layout_width="400px" 
+        		android:layout_height="400px"
+        		android:scaleType="fitXY" 
+				android:padding="10dip"
+			/>
+
+		</TableRow>
 		<TableRow
 			android:id="@+id/widget36"
 			android:layout_width="fill_parent"
@@ -159,14 +176,5 @@
 			</TableLayout>
 		</TableRow>
 	</TableLayout>
-
-
-	<ImageView
-        android:id="@+id/calibImage"
-		android:layout_below="@+id/enable"
-        android:layout_width="400px" 
-        android:layout_height="400px"
-        android:scaleType="fitXY" 
-	/>
 
 </RelativeLayout>
