--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -49,8 +49,8 @@
 
 			<ImageView
        			android:id="@+id/calibImage"
-	    		android:layout_width="400px" 
-        		android:layout_height="400px"
+	    		android:layout_width="200dp" 
+        		android:layout_height="200dp"
         		android:scaleType="fitXY" 
 				android:padding="10dip"
 			/>
